--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Expense Tracker</h1>
-  <h3> Hi... This is Dhruv<h3>
+  <h3> Hi... This is Dhruv</h3>
   <form action="/add-expense" method="POST">
     <label for="category">Category:</label>
     <input type="text" id="category" name="category" required><br><br>
